<resources>
    <string name="app_name">My Dairy</string>
    <string name="msg_one_more_back_button">백키를 한 번 더 누를 시 종료됩니다.</string>
    <string name="create_diary">Create</string>
    <string name="txt_diary_title_hint">오늘의 일기</string>
    <string name="txt_diary_content_hint">일기를 작성해 보세요.</string>
    <string name="need_diary_text">일기를 작성해 주세요.</string>
    <string name="bookmark">Bookmark</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="txt_empty">내용이 비어있습니다.</string>
    <string name="navigation_drawer_open">메뉴열기</string>
    <string name="navigation_drawer_close">메뉴닫기</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>